--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.HomePage.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
     buildTypes {
@@ -23,12 +23,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+    implementation "androidx.navigation:navigation-fragment:2.1.0-rc01"
+    implementation "androidx.navigation:navigation-ui:2.1.0-rc01"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-database:18.0.1'
-   // implementation 'com.google.firebase:firebase-auth:18.1.0'
-   // implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    // implementation 'com.google.firebase:firebase-auth:18.1.0'
+    // implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.firebase:firebase-firestore:20.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
