--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,26 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
-
-        <activity
-            android:name=".HomePage"
-            android:label="@string/title_activity_home_page" />
-        <activity android:name=".ProfilePage" />
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".HomePage"></activity>
+        <activity android:name=".AccountPage" />
         <activity android:name=".LoginPage" />
-        <activity android:name=".RegisterPage">
+        <activity
+            android:name=".ProfilePage"
+            android:parentActivityName=".HomePage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomePage" />
+        </activity>
+        <activity
+            android:name=".RegisterPage"
+            android:parentActivityName=".LoginPage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginPage" />
+        </activity>
+        <activity android:name=".ChooseGenresPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
