--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".HomePage"></activity>
-        <activity android:name=".AccountPage" />
+        <activity android:name=".ChooseGenresPage" />
         <activity android:name=".LoginPage" />
         <activity
             android:name=".ProfilePage"
@@ -24,13 +24,13 @@
                 android:value=".HomePage" />
         </activity>
         <activity
-            android:name=".RegisterPage"
+            android:name=".AccountPage"
             android:parentActivityName=".LoginPage">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginPage" />
         </activity>
-        <activity android:name=".ChooseGenresPage">
+        <activity android:name=".RegisterPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
