--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomePage"></activity>
+        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".HomePage" />
         <activity android:name=".ChooseGenresPage" />
-        <activity android:name=".LoginPage" />
+        <activity android:name=".RegisterPage" />
         <activity
             android:name=".ProfilePage"
             android:parentActivityName=".HomePage">
@@ -30,7 +31,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginPage" />
         </activity>
-        <activity android:name=".RegisterPage">
+        <activity android:name=".LoginPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
