--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:+'
     implementation 'com.firebaseui:firebase-ui-auth:+'
 
-}
+    }
+
+    //implementation 'com.google.api-client:google-api-client:1.23.0'
+   // implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+   // implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
+
+
+
 apply plugin: 'com.google.gms.google-services'
